# fuse

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  HISTORY.md  LICENSE  README.md  Simulation_Refactor.ipynb  nv_hitlet_sim.ipynb  pyproject.toml  run_microphysics.py  run_microphysics_and_s1_s2.py  setup.cfg  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: pytest.yml  python_publish.yml
Notebooks/: Simulation_Refactor.ipynb  sr0_epix_detectorconfig.ini
XeSim/plugins/: __init__.py  common.py
XeSim/plugins/detector_physics/: S1_Signal.py  S1_scintillation_and_photon_propagation.py  S2_Signal.py  S2_photon_propagation.py  electron_drift.py  electron_extraction.py  electron_timing.py  secondary_scintillation.py
XeSim/plugins/micro_physics/: __init__.py  electric_field.py  find_cluster.py  input.py  merge_cluster.py  microphysics_summary.py  output.py  wfsim_connection.py  yields.py
XeSim/plugins/pmt_and_daq/: README.md  __init__.py  pmt_afterpulses.py  pmt_response_and_daq.py
detector_physics/: S1_scintillation_and_photon_propagation.py  S2_photon_propagation.py  electron_drift.py  electron_extraction.py  electron_timing.py  secondary_scintillation.py
docs/: Makefile  doc_requirements.txt
docs/source/: build_datastructure_doc.py  build_plugin_pages.py  build_release_notes.py  conf.py  detector_physics.rst  index.rst  installation.rst  microphysics_simulation.rst  pmt_and_daq.rst  setup.rst  simulation_chain.rst  truth_plugins.rst
docs/source/tech_features/: DeterministicSeed.rst  DynamicChunking.rst
docs/source/tutorials/: 0_Getting_Started.ipynb  1_Microphysics_Simulation.ipynb  3_csv_input.ipynb  (+10 more)
examples/: 0_Getting_Started.ipynb  1_Microphysics_Simulation.ipynb  2_Detectorphysics_Simulation.ipynb  3_csv_input.ipynb  4_Custom_Simulations.ipynb  5_Simulation_Truth.ipynb  6_Public_Config.ipynb  Custom_Simulations.ipynb  Detectorphysics_Simulation.ipynb  Getting_Started.ipynb  Microphysics_Simulation.ipynb  Visualize_Simulation.ipynb  csv_input.ipynb
examples/files/: README.md  XENONnT_public_config.json  fake_to_pe.npy
fuse/: __init__.py  common.py  context.py  context_utils.py  dtypes.py  plugin.py  shared_dtypes.py  vertical_merger_plugin.py  volume_plugin.py
fuse/plugins/: __init__.py
micro_physics/: electric_field.py  find_cluster.py  input.py  merge_cluster.py  output.py  yields.py
pmt_and_daq/: pmt_response_and_daq.py
test/: nv_hitlet_sim_to_fuse.ipynb
test_nv/: Class_structure_to_hitlet.py  Daniel_hitlet.py  Hitlet_nv_fuse.py  acceptance_SR0_test_fuse.json  nv_hitlet_Exemple.ipynb  nv_hitlet_sim_to_fuse.ipynb  nvhitlets.py
test_nv/Andrea/: nv_hitlet_sim_Pietro_221223_comments.ipynb
test_nv/Daniel/: Daniel_hitlet.py
tests/: _utils.py  test_ChunkInput.py  test_DetectorPhysics_csv.py  test_ElectricField.py  test_ElectricField_withDummyMap.py  test_FindCluster.py  test_FullChain.py  test_FullChain_w_DelayedElectrons.py  test_MergeCluster.py  test_MicroPhysics.py  test_MicroPhysics_alt_Yields.py  test_MicroPhysics_with_lineage_clustering.py  test_NestYields.py  test_clustering_functions.py  test_common_functions.py  test_deterministic_seed.py  test_input.py  test_plugin_random_seed.py  test_plugin_versions_in_doc.py  test_truth_plugins.py  test_waveform_building_functions.py
tests/data/: cluster_index_for_test.npy  clustered_interactions_for_test.npy  electric_field_values_for_test.npy  geant4_interactions_and_cluster_index_for_test.npy  geant4_interactions_for_test.npy  interactions_in_roi_and_electric_field_values_for_test.npy  interactions_in_roi_for_test.npy  microphysics_instructions_for_test.csv  microphysics_summary_for_test.npy  quanta_for_test.npy
(+98 files in other folders)
