[tool]
[tool.poetry]
name = "xenon-fuse"
version = "1.4.3"
description = "XENON Framework for Unified Simulations of Events"
authors = [
  "Henning Schulze Eißing, <h_schu55@uni-muenster.de>",
  "Diego Ramírez García, <diego.ramirez@physik.uzh.ch>",
]
readme = "README.md"
homepage = "https://github.com/XENONnT/fuse"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    { include = "fuse" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "<=1.26.0"
pandas = "*"
scipy = "*"
scikit-learn = "*"
immutabledict = "*"
timeout_decorator = "*"
periodictable = "*"
nestpy = ">=2.0.2"
numba = ">=0.58.1"
awkward = ">=2.5.1"
uproot = ">=5.2.1"
strax = ">=1.6.0,<2.0.0"
straxen = ">=2.2.3,<3.0.0"
utilix = ">=0.11.0"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools"]
build-backend = "poetry.core.masonry.api"
